--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         }
     ],
     "require": {
-        "zfcampus/zf-apigility": "^1.3"
+        "zfcampus/zf-apigility": "^1.3",
+        "pedromdev/elasticsearch-module": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8 || ^5.0",
